--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Matthew English",
+  "author": "William Moss",
   "license": "MIT",
   "dependencies": {
     "pg": "^8.13.0"
